auto-reloading frontend on change
Signed-off-by: ryagi <ryagius17@gmail.com>

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:80"
+    develop:
+      watch:
+        - action: rebuild
+          path: ./frontend/static
+          target: /usr/share/nginx/html/static
 
   signalling:
     build:
